--- a/src/app/global/map/map.component.html
+++ b/src/app/global/map/map.component.html
@@ -11,7 +11,7 @@
             d="M 1.26835,1.656226 V 291.44552 H 209.44804 V 1.656226 Z M 7.31718,5.8923672 H 203.39922 V 287.20937 H 7.31718 Z" />
          <path id=16 class="location"
             d="M 7.31718,5.8923672 V 287.11189 H 203.39923 V 5.8923672 Z m 5.697323,4.1108688 H 197.70192 V 283.00102 H 13.014503 Z" />
-         <path class="location"
+         <path class="location" 
             d="M 118.27957,16.129032 108.60215,26.523297 100,37.992832 l -8.871445,9.675543 12.398615,4.27721 21.56244,0.02574 14.33691,4.659498 10.96318,-2.099019 -1.64418,-27.650085 -6.45161,-12.544802 -19.35484,-1.433692 z"
             id=1 />
          <path class="location"
@@ -128,7 +128,8 @@
 </div>
 
 <div *ngIf="mapID==5" [load]="updateMapState()">
-    <svg
+<div #gamePod></div>
+   <svg
        xmlns:dc="http://purl.org/dc/elements/1.1/"
        xmlns:cc="http://creativecommons.org/ns#"
        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -148,7 +149,8 @@
            width="847" />
         <path class="location"
            d="m 25.666667,7 1.166666,147 83.999997,2.33333 22.16667,28 H 273 V 80.5 l 51.33333,-21 V 7 Z"
-           id="38" />
+           id="38" 
+           />
         <path class="location"
            d="m 133,184.33333 h 140 l 1.16667,178.5 -19.83334,21 H 25.666667 L 26.833333,154 l 83.999997,2.33333 z"
            id="39"/>
