--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="custom_skirmesh">
+<div *ngIf="!fbLogin" class="custom_skirmesh">
 	<form action="#">
 		<div class="row justify-content-md-center">
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -72,10 +72,11 @@
 									</div>
 								</div>
 
-								<div id="fieldName" style="display: none;" class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+								<div id="fieldName" style="display: none;"
+									class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 									<div class="form-group">
-										<input formControlName="fieldName" id="userName" type="text" class="form-control"
-											placeholder="Field Name">
+										<input formControlName="fieldName" id="userName" type="text"
+											class="form-control" placeholder="Field Name">
 									</div>
 									<div *ngIf="fieldName.invalid && (fieldName.dirty || fieldName.touched) "
 										class="alert alert-danger ">
@@ -119,21 +120,23 @@
 
 							<div class="actions clearfix">
 
-								<button [disabled]="addUser.invalid" (click)="onSubmit()" type="submit" class="btn cust_skir_signup">
+								<button [disabled]="addUser.invalid" (click)="onSubmit()" type="submit"
+									class="btn cust_skir_signup">
 									Signup
 									<i class="fa fa-arrow-right cust_skirmesh_arrow" aria-hidden="true"></i>
 								</button>
 							</div>
 							<div class="row">
 								<div id="userCreatedMessage" class="alert alert-primary d-none center-cust">
-								   Your user is created!<br>
-								   <a [routerLink]="['/auth/login']" >LOGIN</a>.
+									Your user is created!<br>
+									<a [routerLink]="['/auth/login']">LOGIN</a>.
 								</div>
 								<div id="userCreatFaileddMessage" class="alert alert-danger d-none center-cust">
-								   We are sorry we were not able to create your account at this time <br>
-								   Please try again or <a [routerLink]="['/non-secure/contact-us']" >contact us from our contact us page</a>
+									We are sorry we were not able to create your account at this time <br>
+									Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from our
+										contact us page</a>
 								</div>
-							 </div>
+							</div>
 						</form>
 						<div id="or" class="or">
 							<span>or signup using</span>
@@ -156,10 +159,67 @@
 								</a>
 							</div>
 						</div>
-						<a [routerLink]="['/auth/login']" class="additional-link">Have an Account? <span>LOGIN</span></a>
+						<a [routerLink]="['/auth/login']" class="additional-link">Have an Account?
+							<span>LOGIN</span></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</form>
+</div>
+
+
+<div *ngIf="fbLogin" class="custom_skirmesh">
+	<div class="row justify-content-md-center">
+		<!-- <div class="col-8"> -->
+			<div class="login-screen">
+				<form [formGroup]="fbPass" autocomplete="off" method="POST">
+					<div class="col-6">
+						<h3 class="center-cust">Please Enter a password for Skirmesh</h3>
+						<div class="form-group">
+							<input formControlName="pass" type="password" class="form-control"
+								placeholder="Password">
+						</div>
+						<div *ngIf="pass.invalid && (pass.dirty || pass.touched) "
+							class="alert alert-danger ">
+							<div *ngIf="pass.errors?.required ">
+								Password is required
+							</div>
+							<div *ngIf="pass.errors?.minlength ">
+								Password needs to be min of 5 characters
+							</div>
+						</div>
+					</div>
+					<div class="col-6">
+						<div class="form-group">
+							<input formControlName="confirmPass" type="password" class="form-control"
+								placeholder="Confirm Password">
+						</div>
+						<div *ngIf="confirmPass.invalid && (confirmPass.dirty || confirmPass.touched) "
+							class="alert alert-danger ">
+							<div *ngIf="confirmPass.errors?.required ">
+								Confirm password is required
+							</div>
+							<div *ngIf="confirmPass.errors?.notSame">
+								Passwords needs to match
+							</div>
+						</div>
+					</div>
+				</form>
+				<div>
+					<div id="FBuserCreatedMessage" class="alert alert-primary d-none center-cust">
+						Your user is created!<br>
+						<a [routerLink]="['/auth/login']">LOGIN</a>.
+					</div>
+					<div id="FBuserCreatFaileddMessage" class="alert alert-danger d-none center-cust">
+						We are sorry we were not able to create your account at this time <br>
+						Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from our
+							contact us page</a>
+					</div>
+				</div>
+				<button [disabled]="fbPass.invalid" (click)="onFBSubmit()" type="submit"
+				class="btn cust_skir_signup"> Sign Up!</button>
+			</div>
+		</div>
+	<!-- </div> -->
 </div>
