--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -59,6 +59,27 @@
 									<button (click)="onSubmit()" type="button"
 										class="btn cust_btn px-4 text-white">Login</button>
 								</div>
+								<div id="or" class="or">
+									<span>or signup using</span>
+								</div>
+								<div id="social_media" class="row social_icon">
+									<!-- <div class="top-50 start-50"> -->
+									<div class="col-xs-4">
+										<a  class="btn btn-lg btn-block social_icon">
+											<i class="fa fa-facebook-official"></i>
+										</a>
+									</div>
+									<div   class="col-xs-4">
+										<a  class="btn btn-lg btn-block social_icon">
+											<i class="fa fa-google-plus"></i>
+										</a>
+									</div>
+									<div class="col-xs-4">
+										<a href="#" class="btn btn-lg btn-block social_icon">
+											<i class="fa fa-twitter"></i>
+										</a>
+									</div>
+								</div>
 								<div class="col-6 text-right">
 									<button type="button" class="btn btn-link px-0">Forgot password?</button>
 								</div>
