--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -2,6 +2,9 @@
     color: white;
     text-shadow: 1px 1px rgba(0,0,0,0.5), -1px 1px rgba(0,0,0,0.5), 1px -1px rgba(0,0,0,0.5), -1px -1px rgba(0,0,0,0.5);
 }
+.fb_share a{
+    color: white !important;
+}
  .team-section{
      max-height: 400px;
      overflow-y: scroll;
