--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -53,43 +53,43 @@
 									</div>
 								</div>
 							</div>
-							 
+
 							<div class="row">
 								<div class="col-6">
 									<button (click)="onSubmit()" type="button"
 										class="btn cust_btn px-4 text-white">Login</button>
 								</div>
-								<div id="or" class="or">
-									<span>or signup using</span>
-								</div>
-								<div id="social_media" class="row social_icon">
-									<!-- <div class="top-50 start-50"> -->
-									<div class="col-xs-4">
-										<a  class="btn btn-lg btn-block social_icon">
-											<i class="fa fa-facebook-official"></i>
-										</a>
-									</div>
-									<div   class="col-xs-4">
-										<a  class="btn btn-lg btn-block social_icon">
-											<i class="fa fa-google-plus"></i>
-										</a>
-									</div>
-									<div class="col-xs-4">
-										<a href="#" class="btn btn-lg btn-block social_icon">
-											<i class="fa fa-twitter"></i>
-										</a>
-									</div>
-								</div>
+
+
 								<div class="col-6 text-right">
 									<button type="button" class="btn btn-link px-0">Forgot password?</button>
 								</div>
 								<div class="row">
 									<div id="userLoginFaileddMessage" class="alert alert-danger d-none center-cust">
-										We are sorry we were not able to create your account at this time <br>
+										We are sorry we were not able to log you in at this time <br>
 										Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from
 											our contact us page</a>
 									</div>
 								</div>
+							</div>
+							<hr>
+							<div id="or" class="center-cust row">
+								<span>or sign in using</span>
+							</div>
+							<!-- <div class="center-cust row"> -->
+								<div id="social_media" class="row social_icon">
+									<!-- <div class="top-50 start-50"> -->
+									<div (click)="loginWithFacebook()" class="col-xs-4">
+										<a class="btn btn-lg btn-block social_icon"> 
+											<i class="fa fa-facebook-official">Facebook</i>
+										</a>
+									</div>
+									<div (click)="signInWithGoogle()" class="col-xs-4">
+										<a class="btn btn-lg btn-block social_icon">
+											<i class="fa fa-google-plus">Google</i>
+										</a>
+									</div>
+								<!-- </div> -->
 							</div>
 						</form>
 					</div>
