fix game edit - add team - change name -etc. TODO: remove team

--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -14,8 +14,8 @@
 
   <table class="table table-bordered" formArrayName="teams">
     <tr>
-      <th colspan="2">Assemble the Teams:<button type="button" (click)="addTeam()" class="btn btn-primary keepRight">Add
-          More</button></th>
+      <th colspan="2">Assemble the Teams:<button type="button" (click)="addTeam()" class="btn btn-primary keepRight">
+          Add More</button></th>
       <!-- <th width="150px"></th> -->
     </tr>
     <div style="max-width:80%">
