--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
 <!-- Bootstrap CSS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-<!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.css"> -->
+<!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css"> -->
 <!-- <link rel="stylesheet" href="../assets/libs/font-awesome-4.7.0/css/font-awesome.min.css"/> -->
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v10.0&appId=348781009877452&autoLogAppEvents=1" nonce="5pybCMhH"></script> 
