--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -1,1 +1,96 @@
-home works
+
+  <carousel>
+    <slide>
+      <img src="../../../assets/images/soldierA.jpg" alt="first slide" style="display: block; max-height: 500px; width: 100%;">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Create, Modify, Manage Game Modes</h3>
+        <p>Create game modes for regular game play or custom and unique game modes for events.</p>
+      </div>
+    </slide>
+    <slide>
+      <img src="../../../assets/images/soldierB.jpg" alt="second slide" style="display: block; max-height: 500px; width: 100%;">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Control the game play with live updates</h3>
+        <p>Power to spawn new objectives and modify existing objectives to even out strength in battle.</p>
+      </div>
+    </slide>
+    <slide>
+      <img src="../../../assets/images/soldierC.jpg" alt="third slide" style="display: block; max-height: 500px; width: 100%;">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Track Games Live</h3>
+        <p>Track Active Game stats maps and more with live updates!</p>
+      </div>
+    </slide>
+  </carousel>
+  <div class="container marketing">
+    
+
+
+    <!-- START THE FEATURETTES -->
+
+    <hr class="featurette-divider">
+    <h1 class="center-cust"> The Features</h1>
+    <hr class="featurette-divider">
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Custom Maps</h2>
+        <p class="lead">Build custom maps which change the layout of your location.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  style="max-height: 500px; width: 100%;" src="../../../assets/images/ballahack.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading">Custom Game Modes</h2>
+        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  src="../../../assets/images/gameModes.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Track and Share spoils of the game</h2>
+        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      </div>
+      <div class="col-md-5">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="../../../assets/images/liveNodeUpdates.png"  role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+    <h1 class="center-cust"> The Accolades </h1>
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/ballahack.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+        <h2>Swamp Sniper</h2>
+        <p>It was so cool and all that stuff.</p> 
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+        <h2>Ballahack Airsoft</h2>
+        <p>Great Prodcut</p> 
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+
+        <h2>Rob</h2>
+        <p>Its a good thing</p> 
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+    <!-- /END THE FEATURETTES -->
+
+  </div>
