--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row collapsible" [@collapse]="!gameBoardActive" id="gameManagementBoard">
-            <div class="col-lg-12"><h1 class="text-center pt-3">{{getSelectedGameModeName()}} is LIVE</h1></div>
+            <div class="col-lg-12"><h1 class="text-center pt-3">{{getSelectedGameModeName()}}</h1></div>
 
             <div class="col-lg-12">
                 <div class="text-center pt-3">
