some homepage updates

--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -23,7 +23,7 @@
     </slide>
   </carousel>
   <div class="container marketing">
-    
+
 
 
     <!-- START THE FEATURETTES -->
@@ -34,10 +34,13 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Custom Maps</h2>
-        <p class="lead">Build custom maps which change the layout of your location.</p>
+        <p class="lead">Customized maps let you get more use out of your acreage.
+                        Tired of the same scenarios?  Reconfigure devices to work for you and
+                        maximize your land by seamlessly remapping device locations
+                        and territorial boundaries.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  style="max-height: 500px; width: 100%;" src="../../../assets/images/ballahack.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  style="max-height: 500px; width: 100%;" src="../../../assets/images/ballahack_territory.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
       </div>
     </div>
@@ -46,8 +49,13 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Custom Game Modes</h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading">Custom Game Configurations</h2>
+        <p class="lead"> Each device is capable of operating in a variety of modes,
+                         which can be altered in live games to shift the battle to
+                         keep all players engaged. Reconfigure on the fly or run static
+                         scenarios back to back to challenge assaulting teams with
+                         competitive time trials - it's completely up to you and there
+                         are no limits to the possibilities.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"  src="../../../assets/images/gameModes.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
@@ -59,8 +67,10 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Track and Share spoils of the game</h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading">Track and Share your accomplishments - LIVE</h2>
+        <p class="lead">We pull game data on a per player basis from every game and store it
+                        so players can share and reflect on their accomplishments. Assemble
+                        into squads and watch as your rankings grow within the community.</p>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="../../../assets/images/liveNodeUpdates.png"  role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
@@ -69,26 +79,26 @@
     </div>
 
     <hr class="featurette-divider">
-    <h1 class="center-cust"> The Accolades </h1>
+    <h1 class="center-cust"> People say the darndest things. </h1>
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/ballahack.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/swamp_sniper.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
         <h2>Swamp Sniper</h2>
-        <p>It was so cool and all that stuff.</p> 
+        <p>"It was so cool and all that stuff."</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="../../../assets/images/ballahack_logo.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
         <h2>Ballahack Airsoft</h2>
-        <p>Great Prodcut</p> 
+        <p>"Great Product!"</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+        <!-- <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"/> -->
 
         <h2>Rob</h2>
-        <p>Its a good thing</p> 
+        <p>"Its a good thing."</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
     <!-- /END THE FEATURETTES -->
